--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,1 +1,50 @@
 
+name: Deploy to Cloud Provider
+on:
+  workflow_call:
+    inputs:
+      provider:
+        description: 'Cloud provider to deploy to (google or aws)'
+        required: true
+        type: string
+    secrets:
+      project_id:
+        required: false
+      region:
+        required: false
+      cluster_name:
+        required: false
+      credentials_json:
+        required: false
+      aws_access_key_id:
+        required: false
+      aws_secret_access_key:
+        required: false
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.5
+
+      # --------------------
+      # Google Cloud
+      # --------------------
+      - name: Authenticate with Google Cloud
+        if: ${{ inputs.provider == 'google'}}
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.credentials_json }}
+          project_id: ${{ secrets.project_id }}
+
+      # --------------------
+      # AWS EKS
+      # --------------------
+      - name: Authenticate with AWS
+        if: ${{ inputs.provider == 'aws'}}
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-access-key-id: ${{ secrets.aws_access_key_id }}
+          aws-secret-access-key: ${{ secrets.aws_secret_access_key }}
+          aws-region: ${{ secrets.region }}
+      
