cd: atualiza tag da imagem

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Subistitue imagem no manifest
         if: ${{ inputs.provider == 'google' }}
         run: |
-          echo "Substituindo a imagem no manifest ${inputs.manifest} com a tag ${inputs.image_tag}"
+          echo "Substituindo a imagem no manifest ${{ inputs.manifest }} com a tag ${{ inputs.image_tag }}"
           sed -i "s|image:.*|image: us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/dev-repo-gke/app-image:${{ inputs.image_tag }}|g" ${{ inputs.manifest }}
 
       - name: Autenticate with Google Cloud
