--- a/.github/workflows/deploy-do.yml
+++ b/.github/workflows/deploy-do.yml
@@ -6,8 +6,8 @@ on:
         description: 'Environment to deploy to (dev, staging, prod)'
         required: true
         type: string
-      manifest:
-        description: 'Path to the Kubernetes manifest file'
+      manifests:
+        description: 'Path to Kubernetes manifests for deployment'
         required: true
         type: string
       image_tag:
@@ -19,13 +19,10 @@ jobs:
     environment: ${{ inputs.ambiente }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
       # --------------------
       # DIGITAL OCEAN KUBERNETES
       # --------------------
-      - name: Deploy to Digital Oceam with kubeconfig
+      - name: Set Kube Context
         uses: azure/k8s-set-context@v4
         with:
           method: kubeconfig
@@ -34,6 +31,6 @@ jobs:
       - name: Deploy to Digital Ocean
         uses: azure/k8s-deploy@v5
         with:
-          manifests: ${{ inputs.manifest }}
-          images: ${{ inputs.image_tag }}
+          manifests: ${{ inputs.manifests }}
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/kube-news:${{ inputs.image_tag }}
           namespace: ${{ secrets.CONFIG_NAMESPACE }}
