--- a/.github/workflows/deploy-do.yml
+++ b/.github/workflows/deploy-do.yml
@@ -22,6 +22,9 @@ jobs:
       # --------------------
       # DIGITAL OCEAN KUBERNETES
       # --------------------
+      - name: Validando recebimento do ambiente
+        run: echo "Ambiente recebido: ${{ inputs.ambiente }}"
+
       - name: Set Kube Context
         uses: azure/k8s-set-context@v4
         with:
