fix: verifica o recebimento do ambiente

--- a/.github/workflows/deploy-do.yml
+++ b/.github/workflows/deploy-do.yml
@@ -23,7 +23,8 @@ jobs:
       # DIGITAL OCEAN KUBERNETES
       # --------------------
       - name: Validando recebimento do ambiente
-        run: echo "Ambiente recebido: ${{ inputs.ambiente }}"
+        run: |
+          echo "Ambiente: ${{ inputs.ambiente }}"
 
       - name: Set Kube Context
         uses: azure/k8s-set-context@v4
