--- a/.github/workflows/deploy-do.yml
+++ b/.github/workflows/deploy-do.yml
@@ -14,6 +14,11 @@ on:
         description: 'Docker image tag to use for deployment'
         required: true
         type: string
+    secrets:
+      kubeconfig:
+        description: 'Kubeconfig secret for Digital Ocean Kubernetes'
+        required: true
+  
 jobs:
   deploy:
     environment: ${{ inputs.ambiente }}
