--- a/.github/workflows/deploy-do.yml
+++ b/.github/workflows/deploy-do.yml
@@ -59,5 +59,5 @@ jobs:
 
       - name: Verificando secrets creadas
         run: |
-          kubectl get secret -n ${{ secrets.CONFIG_NAMESPACE }}
+          kubectl get secret
 
