--- a/.github/workflows/deploy-do.yml
+++ b/.github/workflows/deploy-do.yml
@@ -35,6 +35,9 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.KUBECONFIG }}
+      - name: Validando o ambiente recebido no enviroment
+        run: |
+          echo "Ambiente recebido: ${{ inputs.ambiente }}"
 
 
       - name: Create Kubernetes Secret
