--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -25,9 +25,9 @@ jobs:
             - name: Configure AWS Credentials
               uses: aws-actions/configure-aws-credentials@v1
               with:
-                  aws-access-key-id: ${{ inputs.aws_access_key_id }}
-                  aws-secret-access-key: ${{ inputs.aws_secret_access_key }}
-                  aws-region: ${{ inputs.region }}
+                  aws-access-key-id: ${{ secrets.aws_access_key_id }}
+                  aws-secret-access-key: ${{ secrets.aws_secret_access_key }}
+                  aws-region: ${{ secrets.region }}
 
             - name: Validando login no AWS
               run: |
